--- a/language/de_DE.po
+++ b/language/de_DE.po
@@ -1,74 +1,75 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# 
+# Translators:
+# Carsten Bleek <cbleek@yawik.org>, 2015
 msgid ""
 msgstr ""
-"Project-Id-Version: Cross Applicant Management - Install\n"
+"Project-Id-Version: YAWIK\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-07-29 11:30+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2015-07-28 17:13+0200\n"
+"PO-Revision-Date: 2015-07-29 09:19+0000\n"
+"Last-Translator: Carsten Bleek <cbleek@yawik.org>\n"
+"Language-Team: German (http://www.transifex.com/projects/p/yawik/language/de/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: de\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: view/install/index/installation.phtml:13 view/layout/layout.phtml:29
 msgid "Installation"
-msgstr ""
+msgstr "Installation"
 
 #: view/install/index/installation.phtml:45
 msgid "Install"
-msgstr ""
+msgstr "Installieren"
 
 #: view/install/index/install.phtml:12
 msgid ""
 "The base configuration file was successfully created. You can now start "
 "using YAWIK by reloading the browser window."
-msgstr ""
+msgstr "Die Konfigurations Datei wurde erfolgreich erstellt. Sie können nun YAWIK nutzen, indem Sie die Seite neu laden."
 
 #: view/install/index/install.phtml:15
 #, php-format
 msgid ""
 "The configuration file could not be created automatically. So please create "
 "a file called \"%s\" in the directory \"%s\" with the following content:"
-msgstr ""
+msgstr "Die Konfigurations Datei konnte nicht automatisch erstellt werden. Bitte erstellen Sie die Datei \"%s\" im Verzeichnis \"%s\" mit folgendem Inhalt;"
 
 #: view/install/index/install.phtml:19
 msgid ""
-"When you created the file you can start using YAWIK by reloading the browser "
-"window."
-msgstr ""
+"When you created the file you can start using YAWIK by reloading the browser"
+" window."
+msgstr "Nachdem sie die Datei erstellt haben, können Sie YAWIK nutzen, indem Sie die Seite in Ihrem Browser neu laden."
 
 #: view/install/index/prerequisites.phtml:13
 msgid "Prerequisites"
-msgstr ""
+msgstr "Voraussetzungen"
 
 #: view/install/index/prerequisites.phtml:28
 msgid "Creatable"
-msgstr ""
+msgstr "erstellbar"
 
 #: view/install/index/prerequisites.phtml:30
 msgid "Missing"
-msgstr ""
+msgstr "fehlt"
 
 #: view/install/index/prerequisites.phtml:34
 msgid "Not writable"
-msgstr ""
+msgstr "nicht schreibbar"
 
 #: view/install/index/prerequisites.phtml:36
 msgid "Ok"
-msgstr ""
+msgstr "Ok"
 
 #: view/install/index/prerequisites.phtml:48
 msgid ""
 "All required directories exists and have the needed permissions or can be "
 "created. You may savely continue with the installation."
-msgstr ""
+msgstr "Alle benötigten Verzeichnisse existieren und haben die notwendigen Rechte. Du kannst mit der Installation fortfahren."
 
 #: view/install/index/prerequisites.phtml:50
 msgid ""
@@ -76,7 +77,7 @@ msgid ""
 "writable, but it will ease the installation as YAWIK can create the config "
 "files automatically. Consider giving write permission during installation "
 "and revoke it afterwards."
-msgstr ""
+msgstr "Bitte beatchten Sie: Das Verzeichnis config/autoload muss nicht schreibbar sein. Aber es vereinfacht die Installation, da die Konfigurations Datei erstellt werden kann. Überlegen Sie die Schreibberechtigung während der Installation zu gewähren und anschließend wieder zu entfernen."
 
 #: view/install/index/prerequisites.phtml:53
 msgid ""
@@ -84,52 +85,52 @@ msgid ""
 "otherwise it is not possible to run YAWIK. Please ensure that all required "
 "directories either exist with the right permissions or at least are "
 "creatable during this installation process."
-msgstr ""
+msgstr "YAWIK benötig einige Verzeichnisse mit ausreichenden Rechten. Andernfalls ist es nicht möglich YAWIK zu installieren. Bitte stellen Sie sicher, dass die Verzeichnisse existieren oder oder das sie während der Installation erstellt werden dürfen. "
 
 #: view/install/index/prerequisites.phtml:55
 msgid "Check again"
-msgstr ""
+msgstr "erneut prüfen"
 
 #: view/install/index/prerequisites.phtml:56
 msgid "Checking"
-msgstr ""
+msgstr "prüfen"
 
 #: view/error/index.phtml:14
 msgid "An error occurred"
-msgstr ""
+msgstr "Ein Fehler ist aufgetreten"
 
 #: view/error/index.phtml:21
 msgid "Additional information"
-msgstr ""
+msgstr "Zusätzliche Informationen"
 
 #: view/error/index.phtml:24 view/error/index.phtml:48
 msgid "File"
-msgstr ""
+msgstr "Datei"
 
 #: view/error/index.phtml:28 view/error/index.phtml:52
 msgid "Message"
-msgstr ""
+msgstr "Nachricht"
 
 #: view/error/index.phtml:32 view/error/index.phtml:56
 msgid "Stack trace"
-msgstr ""
+msgstr "Stapelverlauf"
 
 #: view/error/index.phtml:42
 msgid "Previous exceptions"
-msgstr ""
+msgstr "Vorherige Exceptions"
 
 #: view/error/index.phtml:71
 msgid "No Exception available"
-msgstr ""
+msgstr "Keine Exception verfügbar"
 
 #: language/_annotated_strings.php:3
 msgid "Database connection string"
-msgstr ""
+msgstr "Datenbank (connection string)"
 
 #: language/_annotated_strings.php:6
 msgid "Initial user name"
-msgstr ""
+msgstr "Initialer Benutzername"
 
 #: language/_annotated_strings.php:9
 msgid "Password"
-msgstr ""
+msgstr "Kennwort"
