--- a/language/en_US.po
+++ b/language/en_US.po
@@ -1,74 +1,74 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# 
+# Translators:
 msgid ""
 msgstr ""
-"Project-Id-Version: Cross Applicant Management - Install\n"
+"Project-Id-Version: YAWIK\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-07-29 11:30+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2015-07-28 17:13+0200\n"
+"PO-Revision-Date: 2015-07-29 08:59+0000\n"
+"Last-Translator: Carsten Bleek <cbleek@yawik.org>\n"
+"Language-Team: English (http://www.transifex.com/projects/p/yawik/language/en/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: en\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: view/install/index/installation.phtml:13 view/layout/layout.phtml:29
 msgid "Installation"
-msgstr ""
+msgstr "Installation"
 
 #: view/install/index/installation.phtml:45
 msgid "Install"
-msgstr ""
+msgstr "Install"
 
 #: view/install/index/install.phtml:12
 msgid ""
 "The base configuration file was successfully created. You can now start "
 "using YAWIK by reloading the browser window."
-msgstr ""
+msgstr "The base configuration file was successfully created. You can now start using YAWIK by reloading the browser window."
 
 #: view/install/index/install.phtml:15
 #, php-format
 msgid ""
 "The configuration file could not be created automatically. So please create "
 "a file called \"%s\" in the directory \"%s\" with the following content:"
-msgstr ""
+msgstr "The configuration file could not be created automatically. So please create a file called \"%s\" in the directory \"%s\" with the following content:"
 
 #: view/install/index/install.phtml:19
 msgid ""
-"When you created the file you can start using YAWIK by reloading the browser "
-"window."
-msgstr ""
+"When you created the file you can start using YAWIK by reloading the browser"
+" window."
+msgstr "When you created the file you can start using YAWIK by reloading the browser window."
 
 #: view/install/index/prerequisites.phtml:13
 msgid "Prerequisites"
-msgstr ""
+msgstr "Prerequisites"
 
 #: view/install/index/prerequisites.phtml:28
 msgid "Creatable"
-msgstr ""
+msgstr "Creatable"
 
 #: view/install/index/prerequisites.phtml:30
 msgid "Missing"
-msgstr ""
+msgstr "Missing"
 
 #: view/install/index/prerequisites.phtml:34
 msgid "Not writable"
-msgstr ""
+msgstr "Not writable"
 
 #: view/install/index/prerequisites.phtml:36
 msgid "Ok"
-msgstr ""
+msgstr "Ok"
 
 #: view/install/index/prerequisites.phtml:48
 msgid ""
 "All required directories exists and have the needed permissions or can be "
 "created. You may savely continue with the installation."
-msgstr ""
+msgstr "All required directories exists and have the needed permissions or can be created. You may savely continue with the installation."
 
 #: view/install/index/prerequisites.phtml:50
 msgid ""
@@ -76,7 +76,7 @@ msgid ""
 "writable, but it will ease the installation as YAWIK can create the config "
 "files automatically. Consider giving write permission during installation "
 "and revoke it afterwards."
-msgstr ""
+msgstr "Please note: It is not required for the config/autoload directory to be writable, but it will ease the installation as YAWIK can create the config files automatically. Consider giving write permission during installation and revoke it afterwards."
 
 #: view/install/index/prerequisites.phtml:53
 msgid ""
@@ -84,52 +84,52 @@ msgid ""
 "otherwise it is not possible to run YAWIK. Please ensure that all required "
 "directories either exist with the right permissions or at least are "
 "creatable during this installation process."
-msgstr ""
+msgstr "YAWIK requires some directories to exist and have proper permissions, otherwise it is not possible to run YAWIK. Please ensure that all required directories either exist with the right permissions or at least are creatable during this installation process."
 
 #: view/install/index/prerequisites.phtml:55
 msgid "Check again"
-msgstr ""
+msgstr "Check again"
 
 #: view/install/index/prerequisites.phtml:56
 msgid "Checking"
-msgstr ""
+msgstr "Checking"
 
 #: view/error/index.phtml:14
 msgid "An error occurred"
-msgstr ""
+msgstr "An error occurred"
 
 #: view/error/index.phtml:21
 msgid "Additional information"
-msgstr ""
+msgstr "Additional information"
 
 #: view/error/index.phtml:24 view/error/index.phtml:48
 msgid "File"
-msgstr ""
+msgstr "File"
 
 #: view/error/index.phtml:28 view/error/index.phtml:52
 msgid "Message"
-msgstr ""
+msgstr "Message"
 
 #: view/error/index.phtml:32 view/error/index.phtml:56
 msgid "Stack trace"
-msgstr ""
+msgstr "Stack trace"
 
 #: view/error/index.phtml:42
 msgid "Previous exceptions"
-msgstr ""
+msgstr "Previous exceptions"
 
 #: view/error/index.phtml:71
 msgid "No Exception available"
-msgstr ""
+msgstr "No Exception available"
 
 #: language/_annotated_strings.php:3
 msgid "Database connection string"
-msgstr ""
+msgstr "Database connection string"
 
 #: language/_annotated_strings.php:6
 msgid "Initial user name"
-msgstr ""
+msgstr "Initial user name"
 
 #: language/_annotated_strings.php:9
 msgid "Password"
-msgstr ""
+msgstr "Password"
