--- a/language/hi_IN.po
+++ b/language/hi_IN.po
@@ -1,21 +1,21 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# 
+# Translators:
 msgid ""
 msgstr ""
-"Project-Id-Version: Cross Applicant Management - Install\n"
+"Project-Id-Version: YAWIK\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-07-29 11:30+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"POT-Creation-Date: 2015-07-28 17:13+0200\n"
+"PO-Revision-Date: 2015-07-29 08:59+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language-Team: Hindi (India) (http://www.transifex.com/projects/p/yawik/language/hi_IN/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: hi_IN\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: view/install/index/installation.phtml:13 view/layout/layout.phtml:29
 msgid "Installation"
@@ -40,8 +40,8 @@ msgstr ""
 
 #: view/install/index/install.phtml:19
 msgid ""
-"When you created the file you can start using YAWIK by reloading the browser "
-"window."
+"When you created the file you can start using YAWIK by reloading the browser"
+" window."
 msgstr ""
 
 #: view/install/index/prerequisites.phtml:13
@@ -132,4 +132,4 @@ msgstr ""
 
 #: language/_annotated_strings.php:9
 msgid "Password"
-msgstr ""
+msgstr "पासवर्ड"
