--- a/language/nl_BE.po
+++ b/language/nl_BE.po
@@ -1,21 +1,21 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# 
+# Translators:
 msgid ""
 msgstr ""
-"Project-Id-Version: Cross Applicant Management - Install\n"
+"Project-Id-Version: YAWIK\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-07-29 11:30+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"POT-Creation-Date: 2015-07-28 17:13+0200\n"
+"PO-Revision-Date: 2015-07-29 08:59+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language-Team: Dutch (Belgium) (http://www.transifex.com/projects/p/yawik/language/nl_BE/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: nl_BE\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: view/install/index/installation.phtml:13 view/layout/layout.phtml:29
 msgid "Installation"
@@ -40,8 +40,8 @@ msgstr ""
 
 #: view/install/index/install.phtml:19
 msgid ""
-"When you created the file you can start using YAWIK by reloading the browser "
-"window."
+"When you created the file you can start using YAWIK by reloading the browser"
+" window."
 msgstr ""
 
 #: view/install/index/prerequisites.phtml:13
@@ -62,7 +62,7 @@ msgstr ""
 
 #: view/install/index/prerequisites.phtml:36
 msgid "Ok"
-msgstr ""
+msgstr "Ok"
 
 #: view/install/index/prerequisites.phtml:48
 msgid ""
@@ -96,31 +96,31 @@ msgstr ""
 
 #: view/error/index.phtml:14
 msgid "An error occurred"
-msgstr ""
+msgstr "Er is een fout opgetreden"
 
 #: view/error/index.phtml:21
 msgid "Additional information"
-msgstr ""
+msgstr "Extra Informatie"
 
 #: view/error/index.phtml:24 view/error/index.phtml:48
 msgid "File"
-msgstr ""
+msgstr "File"
 
 #: view/error/index.phtml:28 view/error/index.phtml:52
 msgid "Message"
-msgstr ""
+msgstr "Bericht"
 
 #: view/error/index.phtml:32 view/error/index.phtml:56
 msgid "Stack trace"
-msgstr ""
+msgstr "Stack trace"
 
 #: view/error/index.phtml:42
 msgid "Previous exceptions"
-msgstr ""
+msgstr "Vorige uitzonderingen"
 
 #: view/error/index.phtml:71
 msgid "No Exception available"
-msgstr ""
+msgstr "Geen Uitzondering beschikbaar"
 
 #: language/_annotated_strings.php:3
 msgid "Database connection string"
@@ -132,4 +132,4 @@ msgstr ""
 
 #: language/_annotated_strings.php:9
 msgid "Password"
-msgstr ""
+msgstr "Wachtwoord"
