--- a/language/pl.po
+++ b/language/pl.po
@@ -1,21 +1,21 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# 
+# Translators:
 msgid ""
 msgstr ""
-"Project-Id-Version: Cross Applicant Management - Install\n"
+"Project-Id-Version: YAWIK\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-07-29 11:30+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"POT-Creation-Date: 2015-07-28 17:13+0200\n"
+"PO-Revision-Date: 2015-07-29 08:59+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language-Team: Polish (http://www.transifex.com/projects/p/yawik/language/pl/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: pl\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: view/install/index/installation.phtml:13 view/layout/layout.phtml:29
 msgid "Installation"
@@ -40,8 +40,8 @@ msgstr ""
 
 #: view/install/index/install.phtml:19
 msgid ""
-"When you created the file you can start using YAWIK by reloading the browser "
-"window."
+"When you created the file you can start using YAWIK by reloading the browser"
+" window."
 msgstr ""
 
 #: view/install/index/prerequisites.phtml:13
@@ -62,7 +62,7 @@ msgstr ""
 
 #: view/install/index/prerequisites.phtml:36
 msgid "Ok"
-msgstr ""
+msgstr "W porządku"
 
 #: view/install/index/prerequisites.phtml:48
 msgid ""
@@ -100,15 +100,15 @@ msgstr ""
 
 #: view/error/index.phtml:21
 msgid "Additional information"
-msgstr ""
+msgstr "Dodatkowe informacje"
 
 #: view/error/index.phtml:24 view/error/index.phtml:48
 msgid "File"
-msgstr ""
+msgstr "Plik"
 
 #: view/error/index.phtml:28 view/error/index.phtml:52
 msgid "Message"
-msgstr ""
+msgstr "Wiadomość"
 
 #: view/error/index.phtml:32 view/error/index.phtml:56
 msgid "Stack trace"
@@ -132,4 +132,4 @@ msgstr ""
 
 #: language/_annotated_strings.php:9
 msgid "Password"
-msgstr ""
+msgstr "Hasło"
