--- a/language/ro.po
+++ b/language/ro.po
@@ -1,21 +1,21 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# 
+# Translators:
 msgid ""
 msgstr ""
-"Project-Id-Version: Cross Applicant Management - Install\n"
+"Project-Id-Version: YAWIK\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-05-13 15:30+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2016-02-20 19:07+0100\n"
+"PO-Revision-Date: 2016-05-13 13:23+0000\n"
+"Last-Translator: Carsten Bleek <cbleek@yawik.org>\n"
+"Language-Team: Romanian (http://www.transifex.com/yawik/yawik/language/ro/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: ro\n"
+"Plural-Forms: nplurals=3; plural=(n==1?0:(((n%100>19)||((n%100==0)&&(n!=0)))?2:1));\n"
 
 #: view/install/index/index.phtml:137
 msgid "PHP version not supported"
@@ -44,7 +44,8 @@ msgstr ""
 #: view/install/index/install.phtml:13
 #, php-format
 msgid ""
-"An administrator account with the login name \"%s\" was created successfully."
+"An administrator account with the login name \"%s\" was created "
+"successfully."
 msgstr ""
 
 #: view/install/index/install.phtml:18
@@ -114,31 +115,31 @@ msgstr ""
 
 #: view/error/index.phtml:14
 msgid "An error occurred"
-msgstr ""
+msgstr "S-a produs o eroare"
 
 #: view/error/index.phtml:21
 msgid "Additional information"
-msgstr ""
+msgstr "Informatii suplimentare"
 
 #: view/error/index.phtml:24 view/error/index.phtml:48
 msgid "File"
-msgstr ""
+msgstr "Fişier"
 
 #: view/error/index.phtml:28 view/error/index.phtml:52
 msgid "Message"
-msgstr ""
+msgstr "Mesaj"
 
 #: view/error/index.phtml:32 view/error/index.phtml:56
 msgid "Stack trace"
-msgstr ""
+msgstr "stivă urmă"
 
 #: view/error/index.phtml:42
 msgid "Previous exceptions"
-msgstr ""
+msgstr "excepțiile anterioare"
 
 #: view/error/index.phtml:71
 msgid "No Exception available"
-msgstr ""
+msgstr "Nici o excepție disponibilă"
 
 #: language/_annotated_strings.php:3
 msgid "Database connection string"
@@ -150,7 +151,7 @@ msgstr ""
 
 #: language/_annotated_strings.php:9
 msgid "Password"
-msgstr ""
+msgstr "Parola"
 
 #: language/_annotated_strings.php:12
 msgid "Email address for system messages"
