--- a/language/sr.po
+++ b/language/sr.po
@@ -1,25 +1,26 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# 
+# Translators:
+# Carsten Bleek <cbleek@yawik.org>, 2016
 msgid ""
 msgstr ""
-"Project-Id-Version: Cross Applicant Management - Install\n"
+"Project-Id-Version: YAWIK\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-05-13 15:30+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2016-02-20 19:07+0100\n"
+"PO-Revision-Date: 2016-05-13 12:46+0000\n"
+"Last-Translator: Carsten Bleek <cbleek@yawik.org>\n"
+"Language-Team: Serbian (http://www.transifex.com/yawik/yawik/language/sr/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: sr\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: view/install/index/index.phtml:137
 msgid "PHP version not supported"
-msgstr ""
+msgstr "ПХП верзија није подржана"
 
 #: view/install/index/index.phtml:142
 #, php-format
@@ -31,25 +32,26 @@ msgstr ""
 #: view/install/index/index.phtml:147
 msgid ""
 "Please ask your servers' administrator to install the proper PHP version."
-msgstr ""
+msgstr "Молимо Вас да администратора ваши сервери \"да инсталирате одговарајућу верзију ПХП."
 
 #: view/install/index/installation.phtml:13 view/layout/layout.phtml:29
 msgid "Installation"
-msgstr ""
+msgstr "инсталација"
 
 #: view/install/index/installation.phtml:55
 msgid "Install"
-msgstr ""
+msgstr "инсталирати"
 
 #: view/install/index/install.phtml:13
 #, php-format
 msgid ""
-"An administrator account with the login name \"%s\" was created successfully."
+"An administrator account with the login name \"%s\" was created "
+"successfully."
 msgstr ""
 
 #: view/install/index/install.phtml:18
 msgid "The base configuration file was successfully created."
-msgstr ""
+msgstr "Фајл база конфигурација је успешно креиран."
 
 #: view/install/index/install.phtml:21
 #, php-format
@@ -60,33 +62,33 @@ msgstr ""
 
 #: view/install/index/install.phtml:31
 msgid "Start using YAWIK"
-msgstr ""
+msgstr "Почните да користите Иавик"
 
 #: view/install/index/prerequisites.phtml:13
 msgid "Prerequisites"
-msgstr ""
+msgstr "preduslovi"
 
 #: view/install/index/prerequisites.phtml:28
 msgid "Creatable"
-msgstr ""
+msgstr "Цреатабле"
 
 #: view/install/index/prerequisites.phtml:30
 msgid "Missing"
-msgstr ""
+msgstr "нестао"
 
 #: view/install/index/prerequisites.phtml:34
 msgid "Not writable"
-msgstr ""
+msgstr "не може писати"
 
 #: view/install/index/prerequisites.phtml:36
 msgid "Ok"
-msgstr ""
+msgstr "Ок"
 
 #: view/install/index/prerequisites.phtml:48
 msgid ""
 "All required directories exists and have the needed permissions or can be "
 "created. You may savely continue with the installation."
-msgstr ""
+msgstr "Сва потребна именика постоји и имају потребне дозволе или може бити креирана. Можете Савели наставити са инсталацијом."
 
 #: view/install/index/prerequisites.phtml:50
 msgid ""
@@ -94,7 +96,7 @@ msgid ""
 "writable, but it will ease the installation as YAWIK can create the config "
 "files automatically. Consider giving write permission during installation "
 "and revoke it afterwards."
-msgstr ""
+msgstr "Имајте на уму: Није потребна за цонфиг / Аутолоад директоријуму да се може писати, али ће олакшати инсталацију као Иавик може аутоматски креирати цонфиг фајлове. Размотрити давање дозволе за писање током инсталације и да га одузме касније."
 
 #: view/install/index/prerequisites.phtml:53
 msgid ""
@@ -102,59 +104,59 @@ msgid ""
 "otherwise it is not possible to run YAWIK. Please ensure that all required "
 "directories either exist with the right permissions or at least are "
 "creatable during this installation process."
-msgstr ""
+msgstr "Иавик захтева неке директоријуме да постоје и имају одговарајуће дозволе, иначе није могуће покренути Иавик. Уверите се да ни сви потребни директоријум постоје са правим дозволама или бар цреатабле током овог процеса инсталације."
 
 #: view/install/index/prerequisites.phtml:55
 msgid "Check again"
-msgstr ""
+msgstr "Проверите поново"
 
 #: view/install/index/prerequisites.phtml:56
 msgid "Checking"
-msgstr ""
+msgstr "проверавање"
 
 #: view/error/index.phtml:14
 msgid "An error occurred"
-msgstr ""
+msgstr "Дошло је до грешке"
 
 #: view/error/index.phtml:21
 msgid "Additional information"
-msgstr ""
+msgstr "Додатне Информације"
 
 #: view/error/index.phtml:24 view/error/index.phtml:48
 msgid "File"
-msgstr ""
+msgstr "фајл"
 
 #: view/error/index.phtml:28 view/error/index.phtml:52
 msgid "Message"
-msgstr ""
+msgstr "порука"
 
 #: view/error/index.phtml:32 view/error/index.phtml:56
 msgid "Stack trace"
-msgstr ""
+msgstr "стека"
 
 #: view/error/index.phtml:42
 msgid "Previous exceptions"
-msgstr ""
+msgstr "Претходни изузеци"
 
 #: view/error/index.phtml:71
 msgid "No Exception available"
-msgstr ""
+msgstr "Без изузетка доступан"
 
 #: language/_annotated_strings.php:3
 msgid "Database connection string"
-msgstr ""
+msgstr "Датабасе цоннецтион стринг"
 
 #: language/_annotated_strings.php:6
 msgid "Initial user name"
-msgstr ""
+msgstr "Почетно корисничко име"
 
 #: language/_annotated_strings.php:9
 msgid "Password"
-msgstr ""
+msgstr "лозинка"
 
 #: language/_annotated_strings.php:12
 msgid "Email address for system messages"
-msgstr ""
+msgstr "Емаил адреса за системске поруке"
 
 #: language/_annotated_strings.php:15
 msgid "Connecting the database failed: %databaseError%"
@@ -162,4 +164,4 @@ msgstr ""
 
 #: language/_annotated_strings.php:18
 msgid "Invalid connection string"
-msgstr ""
+msgstr "Неважећи веза низ"
